Bug 425549 - Kate "User Feedback" reports incorrect screen details
Summary: Kate "User Feedback" reports incorrect screen details
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kuserfeedback
Classification: Frameworks and Libraries
Component: Telemetry Provider (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
: 426470 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-19 12:40 UTC by Adomas
Modified: 2020-09-13 10:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kate Report (292.57 KB, image/png)
2020-08-19 12:40 UTC, Adomas
Details
Kate Report Details (323.02 KB, image/png)
2020-08-19 12:40 UTC, Adomas
Details
kscreen configuration (215.84 KB, image/png)
2020-08-19 12:40 UTC, Adomas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adomas 2020-08-19 12:40:18 UTC
Created attachment 131009 [details]
Kate Report

SUMMARY
It seems that "User Feedback" functionality incorrectly reports screen details in Kate app.

What Kate reports:

"screens": [
        {
            "dpi": 80,
            "height": 1080,
            "width": 1920
        },
        {
            "dpi": 80,
            "height": 1080,
            "width": 1920
        }
    ],

What is SHOULD report:

"screens": [
        {
            "dpi": 192,
            "height": 2160,
            "width": 3840
        },
        {
            "dpi": 192,
            "height": 2160,
            "width": 3840
        }
    ],


SOFTWARE/OS VERSIONS
Arch Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
I think this is important to fix, as currently the statistics that KDE Community receives is distorted and inaccurate.
Comment 1 Adomas 2020-08-19 12:40:35 UTC
Created attachment 131010 [details]
Kate Report Details
Comment 2 Adomas 2020-08-19 12:40:46 UTC
Created attachment 131011 [details]
kscreen configuration
Comment 3 Bug Janitor Service 2020-08-19 15:35:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/kuserfeedback/-/merge_requests/3
Comment 4 Volker Krause 2020-08-22 09:17:19 UTC
Git commit b0cdb302bd569b446bba96f323d046b0b3d14cd3 by Volker Krause.
Committed on 22/08/2020 at 09:12.
Pushed by vkrause into branch 'master'.

Also record the device pixel ratio

That cannot be determined from the (scaled) values we record so far for
the screens.

M  +6    -1    src/console/schematemplates/screens.schema
M  +1    -0    src/provider/core/screeninfosource.cpp

https://invent.kde.org/libraries/kuserfeedback/commit/b0cdb302bd569b446bba96f323d046b0b3d14cd3
Comment 5 Volker Krause 2020-09-13 10:22:45 UTC
*** Bug 426470 has been marked as a duplicate of this bug. ***