Also record the device pixel ratio

That cannot be determined from the (scaled) values we record so far for
the screens.

BUG: 425549